Fixed: 헤더 z-index 및 로직 수정

--- a/global.css
+++ b/global.css
@@ -80,14 +80,10 @@ footer .contact__email,
 
 .selected {
   transform: scale(1.2);
-  color: #a29bfe;
+  color: #f2f2f2;
 }
 
 @media screen and (max-width: 767px) {
-  .nav__wrap {
-    background-color: #e7e5dc;
-  }
-
   .about .about__skills {
     flex-direction: column;
   }
